--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,26 +13,29 @@ add_executable(nbody
         base/model.h
         base/nbody_sim.cpp
         base/nbody_sim.h
-        integrator/integrator.cpp
-        integrator/integrator.h
+        base/star.cpp base/star.h
         base/vec3d.cpp base/vec3d.h
+        force_calc/flat_oct_tree.cpp
+        force_calc/flat_oct_tree.h
         force_calc/force_calc.cpp
         force_calc/force_calc.h
-        base/star.cpp base/star.h
-        integrator/integrator_euler.cpp
-        integrator/integrator_euler.h
         force_calc/force_calc_all_pairs.cpp
         force_calc/force_calc_all_pairs.h
-        force_calc/oct_tree.cpp
-        force_calc/oct_tree.h
         force_calc/force_calc_barnes_hut.cpp
         force_calc/force_calc_barnes_hut.h
-        integrator/integrator_leapfrog.cpp
-        integrator/integrator_leapfrog.h
         force_calc/force_calc_barnes_hut_parallel.cpp
         force_calc/force_calc_barnes_hut_parallel.h
+        force_calc/oct_tree.cpp
+        force_calc/oct_tree.h
+        integrator/integrator.cpp
+        integrator/integrator.h
+        integrator/integrator_euler.cpp
+        integrator/integrator_euler.h
+        integrator/integrator_leapfrog.cpp
+        integrator/integrator_leapfrog.h
         utils/stopwatch.cpp
-        utils/stopwatch.h)
+        utils/stopwatch.h
+        )
 
 add_executable(nbody_test
         test/catch.hpp
