Reformat for release version 2.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 project(bh_sim)
 
 set(CMAKE_CXX_STANDARD 17)
-
 set(CMAKE_VERBOSE_MAKEFILE ON)
-
 set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-Ofast -g -pthread")
+include_directories(.)
 
 add_executable(nbody
         base/main.cpp
